# xclif

./: .readthedocs.yaml  Justfile  MANIFESTO.md  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_frameworks.py  bench_frameworks.sh  bench_parsing.py
benchmarks/examples/: xclif_greeter_flat.py
benchmarks/examples/xclif_greeter/: _xclif_manifest.py
benchmarks/examples/xclif_greeter_manifest/: __main__.py
docs/: api.rst  changelog.md  commands.rst  compiler.rst  conf.py  flat-api.rst  getting-started.rst  index.rst  manifesto.md  option-system-design.md  options.rst  quickstart.rst  routing.rst
docs/design/: option-system.md
examples/greeter/: README.md
examples/greeter/greeter/routes/: __init__.py  greet.py
examples/greeter/greeter/routes/config/: read.py  set.py
examples/poetry-clone/: README.md
examples/poetry-clone/poetry/routes/: __init__.py
examples/poetry-clone/poetry/routes/env/: __init__.py  use.py
examples/poetry-clone/poetry/routes/self/: __init__.py  update.py
examples/poetry-clone/poetry/routes/self/show/: __init__.py  plugins.py
src/xclif/: __init__.py  __main__.py  command.py  compiler.py  definition.py  errors.py  parser.py
src/xclif/_cli/: __init__.py  compile.py
tests/: conftest.py  test_cli.py  test_command.py  test_compiler.py  test_examples.py  test_integration_greeter.py  test_parser.py
