[project]
name = "xclif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ThatXliner", email = "bryan.hu.2020@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
